--- a/css/blog.css
+++ b/css/blog.css
@@ -3,9 +3,15 @@
 }
 
 .posts-list {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
+    -webkit-display: flex;
+        -moz-display: flex;
+            display: flex;
+    -webkit-justify-content: space-between;
+        -moz-justify-content: space-between;
+            justify-content: space-between;    
+    -webkit-flex-wrap: wrap;
+        -moz-flex-wrap: wrap;
+            flex-wrap: wrap;        
     margin: 0 -10px -20px;
 }
 
@@ -20,7 +26,8 @@
     color: #1E0606;
 }
 
-.posts-title:hover {
+.posts-title:hover,
+.posts-title:focus {
     text-decoration: underline;
     cursor: pointer;
 }
