--- a/css/catalog.css
+++ b/css/catalog.css
@@ -1,4 +1,3 @@
-
 .container-box {
     max-width: 1080px;
     width: 100%;
@@ -12,8 +11,12 @@
 }
 
 .products-list {
-    display: flex; 
-    flex-wrap: wrap;
+    -webkit-display: flex;
+        -moz-display: flex;
+            display: flex; 
+    -webkit-flex-wrap: wrap;
+        -moz-flex-wrap: wrap;
+            flex-wrap: wrap;    
     margin: 0 -10px -20px;
 }
 
@@ -151,7 +154,8 @@
     text-transform: uppercase;
 }
 
-.title-link:hover {
+.title-link:hover,
+.title-link:focus {
     text-decoration: underline;
 }
 
