--- a/css/style.css
+++ b/css/style.css
@@ -12,12 +12,18 @@
 }
 
 .slider-content {
-    display: flex;
+    -webkit-display: flex;
+        -moz-display: flex;
+            display: flex;
 }
 
 .toggle-content {
-    display: flex;
-    flex-direction: column;
+    -webkit-display: flex;
+        -moz-display: flex;
+            display: flex;
+    -webkit-flex-direction: column; 
+        -moz-flex-direction: column;  
+            flex-direction: column;
     max-width: 30px;
     margin-top: 17px;
     margin-left: 5px;
@@ -72,7 +78,9 @@
     text-transform: uppercase;
     background: #C29974;
     color: #FFFFFF;     
-    display: flex;
+    -webkit-display: flex;
+        -moz-display: flex;
+            display: flex;
     justify-content: center;
     padding: 11px;
     margin: 0;
@@ -94,8 +102,12 @@
 }
 
 .products-list {
-    display: flex;
-    justify-content: space-between;
+    -webkit-display: flex;
+        -moz-display: flex;
+            display: flex;
+    -webkit-justify-content: space-between;
+        -moz-justify-content: space-between;
+            justify-content: space-between;   
     margin: 0 -10px -20px;
 }
 
@@ -129,7 +141,9 @@
 }
 
 .products-info {
-    display: flex;
+    -webkit-display: flex;
+        -moz-display: flex;
+            display: flex;
     max-width: 680px;
     margin-bottom: 0;
 }
@@ -148,8 +162,12 @@
 /* delivery */
 
 .delivery {
-    display: flex;
-    justify-content: space-between;
+    -webkit-display: flex;
+        -moz-display: flex;
+            display: flex;
+    -webkit-justify-content: space-between;
+        -moz-justify-content: space-between;
+            justify-content: space-between;    
     margin-bottom: 90px;
 }
 
@@ -158,8 +176,12 @@
 }
 
 .delivery-info {
-    display: flex;
-    flex-direction: column;
+    -webkit-display: flex;
+        -moz-display: flex;
+            display: flex;
+    -webkit-flex-direction: column; 
+        -moz-flex-direction: column;  
+            flex-direction: column;    
     max-width: 540px;
     margin-top: 30px;
     margin-left: 60px;
@@ -174,43 +196,50 @@
     font-size: 38px;
     line-height: 46px;
     margin: 0;
-    margin-bottom: 6px;
+    margin-bottom: 17px;
 }
 
 .delivery-tabs {
-    display: flex;
-    flex-direction: column;
+    -webkit-display: flex;
+        -moz-display: flex;
+            display: flex;
+    -webkit-flex-direction: column; 
+        -moz-flex-direction: column;  
+            flex-direction: column;    
 }
 
 .tabs-item {
     font-family: "Crimson Text", Arial, sans-serif;
     font-style: italic;
     font-size: 26px;
-    line-height: 32px;
-}
-
-.delivery-input {
-    display: none;
-} 
-
-.delivery-tabs label {
-	display: block; 
-	cursor: pointer;		
-}
-
-.delivery-tabs input:checked + label {
-	font-weight: bold;
-    background: rgba(112, 187, 220, 0.2);
-    width: 326px;
+    line-height: 32px;  
+    margin: 0;  
     height: 55px;
 }
 
-/* Не работает */
-.tab-first:checked ~ .tab-content-1,
-.tab-second:checked ~ .tab-content-2,
-.tab-third:checked ~ .tab-content-3 {
-    display: block;
+.delivery-input {
+    display: none;   
+} 
+
+.tabs-item {
+    cursor: pointer;
 }
+
+.checked {
+    position: relative;
+    font-weight: bold;
+}
+
+.checked:after {
+    content: " ";
+    display: block;
+    position: absolute;
+    left: -60px;
+    top: -13px;
+    background: rgba(112, 187, 220, 0.2);    
+    width: 326px;
+    height: 55px;
+} 
 
 .delivery-btn {
     max-width: 149px;
@@ -219,12 +248,16 @@
 /* Brands */
 
 .brands-list {
-    display: flex;
-    justify-content: space-between;
+    -webkit-display: flex;
+        -moz-display: flex;
+            display: flex;
+    -webkit-justify-content: space-between;
+        -moz-justify-content: space-between;
+            justify-content: space-between;    
     margin-bottom: 90px;
 }
 
-.brands-item:hover {
+.brands-item:hover, .brands-item:focus {
     opacity: .5;
     cursor: pointer;
 }
@@ -232,8 +265,12 @@
 /* About */
 
 .about {
-    display: flex;
-    justify-content: space-between;
+    -webkit-display: flex;
+        -moz-display: flex;
+            display: flex;
+    -webkit-justify-content: space-between;
+        -moz-justify-content: space-between;
+            justify-content: space-between;    
     margin-bottom: 60px;
 }
 
@@ -306,7 +343,9 @@
 
 .contact-form fieldset{
     border: none;
-    display: flex;
+    -webkit-display: flex;
+        -moz-display: flex;
+            display: flex;
     max-width: 0%;
     margin: 0;
     padding: 0;
@@ -321,7 +360,9 @@
 }
 
 .contact-wrapper {
-    display: flex;  
+    -webkit-display: flex;
+        -moz-display: flex;
+            display: flex;  
 }
 
 div .form-name {
@@ -330,12 +371,18 @@ div .form-name {
 }
 
 .contact-block {
-    flex-direction: column;
+    -webkit-flex-direction: column; 
+        -moz-flex-direction: column;  
+            flex-direction: column;
     width: 290px;
     margin-right: 20px;
 }
 
 .contact-wrapper:focus-within label {
+    color: rgba(0, 0, 0, 0.3);
+}
+
+.contact-container:focus-within label {
     color: rgba(0, 0, 0, 0.3);
 }
 
@@ -417,7 +464,8 @@ div .form-name {
     opacity: 1;
 }
 
-.input:checked:hover + label:hover {
+.input:checked:hover + label:hover, 
+.input:checked:focus + label:focus {
     opacity: 1;
     text-decoration: underline;
 }
@@ -457,7 +505,13 @@ div .form-name {
     border: none;
 }
 
+.popup-close:hover svg path,
+.popup-close:focus svg path {
+    fill:#FFFFFF;
+    opacity: 0.5;
+}
 
-
-
-
+.popup-close:active svg path {
+    fill:#FFFFFF;
+    opacity: 0.3;
+}
