--- a/css/blog.css
+++ b/css/blog.css
@@ -1,5 +1,5 @@
 .posts {
-    margin-bottom: 60px;
+    margin-bottom: 52px; 
 }
 
 .posts-list {
@@ -17,7 +17,8 @@
 
 .posts-item {
     max-width: 380px;
-    margin-bottom: 30px;
+    margin-bottom: 19px;
+    margin-left: 10px;
     overflow: hidden;    
 }
 
