--- a/css/catalog.css
+++ b/css/catalog.css
@@ -7,7 +7,7 @@
 /* Products */
 
 .products {
-    margin-bottom: 55px;
+    margin-bottom: 42px;
 }
 
 .products-list {
@@ -161,9 +161,12 @@
     text-transform: uppercase;
     text-align: left;
     font-size: 38px;
-    line-height: 46px;
+    line-height: 46px;    
+    margin-left: 10px;    
+    margin-bottom: 33px;    
 }
 
 .description-item {
     bottom: 15px;
+    margin-left: 13px;
 }
